Fixed a width issue on smaller screens.

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -109,6 +109,12 @@ header .intro-text .skills {
     font-weight: 300;
 }
 
+@media (max-width: 480px) {
+    body {
+        width: fit-content;
+    }
+}
+
 @media(min-width:768px) {
     header .container {
         padding-top: 200px;
